# blog-site

./: .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: django.yml
blogs/: admin.py  models.py  tests.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_category_series_post_author_post_content_and_more.py  0003_alter_post_pub_date.py  0004_alter_post_pub_date.py  0005_comment.py  0006_alter_comment_post.py  0007_comment_reply_to.py
blogs/static/css/: styles.css
blogs/templates/: base.html  footer.html  navbar.html
blogs/templates/blogs/: featured.html  homepage.html  post_detail.html  search_results.html
blogs/templatetags/: markdown_extras.py
core/: settings.py  urls.py
templates/: base_centered.html
templates/registration/: login.html
users/: models.py  tests.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_is_author.py  0003_remove_user_is_author.py
