[tool.poetry]
name = "blog-site"
version = "0.1.0"
description = "General Blog Site"
authors = ["Isai Ramirez <86127102+CodeSwallow@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "blog_site"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.3"
dj-database-url = "^1.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
