[tool.poetry]
name = "blog-site"
version = "0.1.0"
description = "General Blog Site"
authors = ["Isai Ramirez <86127102+CodeSwallow@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "blog_site"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.3"
dj-database-url = "^1.0.0"
markdown = "^3.4.1"
pygments = "^2.13.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
